--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "TODO",
-  "description": "TODO",
+  "name": "RSS-reader",
+  "description": "RSS-reader",
   "version": "0.0.1",
   "scripts": {
     "dev": "sapper dev",
     "build": "sapper build --legacy",
-    "export": "sapper export --legacy",
     "start": "node __sapper__/build",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
-    "test": "run-p --race dev cy:run"
+    "test": "run-p --race dev cy:run",
+    "clean": "rm -rf ./__sapper__",
+    "export": "sapper export --legacy",
+    "deploy": "npm run clean && npm run export && node ./scripts/gh-pages.js"
   },
   "dependencies": {
     "compression": "^1.7.1",
     "express": "^4.17.1",
+    "gh-pages": "^2.2.0",
     "rss-parser": "^3.7.6",
     "sirv": "^0.4.0"
   },
